mikan_files = files(
    'context.cpp',
    'engine.cpp',
    'lib.cpp',
    'mecab-model.cpp',
    'misc.cpp',
    'romaji-index.cpp',
    'spawn/process.cpp',
)

install_data('fcitx-mikan.conf', install_dir : get_option('datadir') / 'fcitx5/addon')
install_data('mikan.conf', install_dir : get_option('datadir') / 'fcitx5/inputmethod')
